reviews and improved formatting

--- a/index.html
+++ b/index.html
@@ -33,23 +33,32 @@
             </div>
             <div id="stats" class="section section-light">
                 <br>
+                <br>
+                <iframe class="iframe sketchfab-embed-wrapper" src="https://docs.google.com/presentation/d/1slnxfj4WBLqJfFvYPrUQf9FORS4l82eD2c6Hujd1YSM/embed?start=true&amp;loop=true&amp;delayms=3000&amp;slide=id.p" frameborder="0" allowfullscreen="allowfullscreen" mozallowfullscreen="true" webkitallowfullscreen="true" class="project-slideshow"></iframe>
+                <br>
+                <br>
+                <br>
                 <h5 class="big">About the Game</h5>
                 <br>
                 <div class="goal stat-tile">
-                    <img class="stat-img" src="images/connect.png">
-                    <h5 class="desc">2-5 Players</h5>
+                    <img class="goals-img" src="images/connect.png">
+                    <h5 class="active">2-5 Players</h5>
+                    <p class="">Play with your friends, your family, your neighbors, or complete strangers!</p>
                 </div>
                 <div class="goal stat-tile">
-                    <img class="stat-img" src="images/event.png">
-                    <h5 class="desc">Ages 7+</h5>
+                    <img class="goals-img" src="images/event.png">
+                    <h5 class="active">Ages 7+</h5>
+                    <p class="desc">Parents should be advised that while some game pieces are technically edible, some have a choking hazard and none of them are healthy</p>
                 </div>
                 <div class="goal stat-tile">
-                    <img class="stat-img" src="images/time.png">
-                    <h5 class="desc">30-80 mins</h5>
+                    <img class="goals-img" src="images/time.png">
+                    <h5 class="active">30-80 mins</h5>
+                    <p class="desc">This depends on the number of players! 2-player games run fairly quickly, while 5-player games can speed by or fill up a family game night!</p>
                 </div>
                 <div class="goal stat-tile">
-                    <img class="stat-img" src="images/rules.png">
-                    <h5 class="">See rules for more details</h5>
+                    <img class="goals-img" src="images/rules.png">
+                    <h5 class="active">See rules for more details</h5>
+                    <p class="desc">Click the rules link on the navbar above to see detailed setup and rules for the game. It's quick to learn and fun to play (and replay (and replay))!</p>
                 </div>
                 <br>
                 <hr>
@@ -64,9 +73,6 @@
                 <hr>
                 <br>
 
-                <iframe class="iframe sketchfab-embed-wrapper" src="https://docs.google.com/presentation/d/1slnxfj4WBLqJfFvYPrUQf9FORS4l82eD2c6Hujd1YSM/embed?start=true&amp;loop=true&amp;delayms=3000&amp;slide=id.p" frameborder="0" allowfullscreen="allowfullscreen" mozallowfullscreen="true" webkitallowfullscreen="true" class="project-slideshow"></iframe>
-                <br>
-                <br>
                 <br>
                 <div class="sketchfab-embed-wrapper"><iframe width="640" height="480" src="https://sketchfab.com/models/a02af2ee84724e71a2953d2d2d0c015e/embed?autospin=0.2&amp;autostart=1&amp;preload=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                     <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
@@ -74,28 +80,30 @@
                     </p>
                 </div>
                 <!-- Reviews  -->
-                <!-- <br>
-                <h5 class="big">What People are Saying about Burning Bridges</h5>
                 <br>
+                <hr>
+                <br>
+                <br>
+                <h5 class="big">Reviews and Implemented Feedback</h5>
                 <div class="goal stat-tile">
                     <img class="goals-img" src="images/review1.png">
-                    <h5 class="desc"> Players each play as a Mafioso family vying against one another to make it back home. With the ability to literally build bridges, burn them down, and hold other player's family members hostage, the game forces players to carefully tiptoe back home, stepping on a couple of enemies' toes on the way home.</h5>
-                </div>
-                <div class="goal stat-tile">
-                    <img class="goals-img" src="images/review2.png">
-                    <h5 class="desc">Ages 7+</h5>
+                    <h5 class="desc">(REVIEW) "Players each play as a Mafioso family vying against one another to make it back home. With the ability to literally build bridges, burn them down, and hold other player's family members hostage, the game forces players to carefully tiptoe back home, stepping on a couple of enemies' toes on the way home."</h5>
                 </div>
                 <div class="goal stat-tile">
                     <img class="goals-img" src="images/review3.png">
-                    <h5 class="desc">30-80 mins</h5>
+                    <h5 class="desc">(REVIEW) "Player interaction as a whole includes taking hostages, which creates another element of strategy other than creating and burning bridges. This gives the player some choice in which the capturer gives demands to the captive which put the captive at a disadvantage. This is reminiscent of Monopoly where if someone cannot afford rent they have to mortgage their properties which further reduces their potential income."</h5>
+                </div>
+                <div class="goal stat-tile">
+                    <img class="goals-img" src="images/review2.png">
+                    <h5 class="desc">(FEATURE) "I would suggest expanding the lore and making it more dramatic so that a player can know how and why they are able to carry out the mechanics from a story standpoint."</h5>
                 </div>
                 <div class="goal stat-tile">
                     <img class="goals-img" src="images/review4.png">
-                    <h5 class="">See rules for more details</h5>
+                    <h5 class="">(FEATURE) Some unintended consequences of the rules were that people were able to continuously trap one “family member” over and over because we did not see a rule that said what happened to the hostage and the capturer after the hostage situation is over. </h5>
                 </div>
                 <br>
                 <hr>
-                <br> -->
+                <br>
             </div>
 
         </div>
