--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Samiam Games</title>
-        <link rel="icon" href="favicon.png" type="image/png" />
+        <!-- <link rel="icon" href="matches.png" type="image/png" /> -->
 
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">   
         <!--  Custom Stylesheets  -->
@@ -80,7 +80,7 @@
                     </p>
                 </div>
                 <!-- Reviews  -->
-                <br>
+                <bgitr>
                 <hr>
                 <br>
                 <br>
@@ -91,15 +91,15 @@
                 </div>
                 <div class="goal stat-tile">
                     <img class="goals-img" src="images/review3.png">
-                    <h5 class="desc">(REVIEW) "Player interaction as a whole includes taking hostages, which creates another element of strategy other than creating and burning bridges. This gives the player some choice in which the capturer gives demands to the captive which put the captive at a disadvantage. This is reminiscent of Monopoly where if someone cannot afford rent they have to mortgage their properties which further reduces their potential income."</h5>
+                    <h5 class="desc">(REVIEW) "I would play this version of the Cones of Dunshire"</h5>
                 </div>
                 <div class="goal stat-tile">
                     <img class="goals-img" src="images/review2.png">
-                    <h5 class="desc">(FEATURE) "I would suggest expanding the lore and making it more dramatic so that a player can know how and why they are able to carry out the mechanics from a story standpoint."</h5>
+                    <h5 class="desc">(REVIEW) "It's pretty cool!"</h5>
                 </div>
                 <div class="goal stat-tile">
                     <img class="goals-img" src="images/review4.png">
-                    <h5 class="">(FEATURE) Some unintended consequences of the rules were that people were able to continuously trap one “family member” over and over because we did not see a rule that said what happened to the hostage and the capturer after the hostage situation is over. </h5>
+                    <h5 class="">(FIXED) Some unintended consequences of the rules were that people were able to continuously trap one “family member” over and over because we did not see a rule that said what happened to the hostage and the capturer after the hostage situation is over. </h5>
                 </div>
                 <br>
                 <hr>
